Enhance Concentrado handling: add mineralesSecundarios and loteOrigenMultiple fields; update creation logic to support multiple concentrados; implement ConcentradoMineralAnalyzer for mineral analysis; refactor ConcentradoController and related DTOs for improved data flow and response handling.